# teach2drive_adapter

./: .dockerignore  .gitignore  README.md  pyproject.toml
configs/: adapter_v1_example.sh  collect_autocarla_server.sh  collect_tesla_benchmix8_front_triplet_target_3h_autocarla_server.sh  collect_tesla_front_triplet_target_3h.sh  collect_tesla_multitown_front_triplet_target_3h_autocarla_server.sh  collect_tesla_pdm_lite_8town_3h.sh  collect_tesla_pdm_lite_8town_3h_autocarla_server.sh  collect_tesla_pdm_lite_8town_3h_skip_route2_autocarla_server.sh  collect_tesla_pdm_lite_8town_3h_supervised_autocarla_server.sh  collect_tesla_pdm_lite_front_triplet_full.sh  collect_tesla_pdm_lite_front_triplet_full_supervised_local.sh  collect_town13_tesla_paired_tfpp_ego_front_triplet_3h.sh  collect_town13_tesla_paired_tfpp_ego_front_triplet_3h_autocarla_server.sh  collect_transfuserpp_2h.sh  collect_vehicle_b_front_triplet_town13_target_3h.sh  collect_vehicle_b_town13_paired_tfpp_ego_front_triplet_3h.sh  collect_vehicle_b_town13_paired_tfpp_ego_front_triplet_3h_autocarla_server.sh  eval_prior_strict_g3_full_town13_topdown_pip_front_local.sh  eval_tfpp_task_feature_sgpu_mission1_direct_server.sh  eval_tfpp_task_feature_sgpu_mission1_server.sh  run_safe_ctrl_proxy_queue.py  run_safe_ctrl_proxy_queue_server.sh  start_pdm_lite_front_triplet_collection_server.sh  start_prior_residual_training_jobs_server.sh  train_lora_pdm_lite_3h_front_triplet_shifted_server.sh  train_lora_pdm_lite_3h_v2_antiinertia_server.sh  train_lora_pdm_lite_3h_v3_backbone_unfreeze_server.sh  (+65 more)
scripts/: gen_depth_gt.py  (+39 more)
(+39 files in other folders)
