[project]
name = "teach2drive-adapter"
version = "0.1.0"
description = "Small-data adapter fine-tuning scaffold for portable end-to-end driving policies."
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.23,<2",
  "torch",
  "opencv-python-headless>=4.8,<4.9",
  "timm>=1.0,<1.1",
  "einops>=0.4,<0.9",
  "Pillow>=10,<11",
  "shapely>=2,<3",
]

[tool.setuptools.packages.find]
include = ["teach2drive_adapter*"]
